--- a/css/style.css
+++ b/css/style.css
@@ -85,8 +85,8 @@ a {
 
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
-  max-width: 1120px;
-  margin-inline: 1.5rem;
+  max-width: 100vw;
+  margin-inline: 1rem;
 }
 
 /*=============== HEADER ===============*/
@@ -94,7 +94,7 @@ a {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   background-color: var(--header-white-color);
   box-shadow: 0 2px 16px hsla(220, 32%, 8%, 0.3);
   z-index: var(--z-fixed);
@@ -631,13 +631,15 @@ a {
 /* Contact Us */
 .contact-us-title {
   text-align: center;
-  width: 500px;
+  width: 100vw;
   padding-top: 18px;
   padding-bottom: 10px;
   margin: 1rem auto;
   border-top: 4px solid #ae764e;
 }
 .contact-us-wrapper {
+  width: 100vw
+  ;
   background-color: #ffecdb;
 }
 
